[gd_scene load_steps=12 format=2]

[ext_resource path="res://goblin.tscn" type="PackedScene" id=1]
[ext_resource path="res://platformScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameController.gd" type="Script" id=3]
[ext_resource path="res://music/bgm_no_loop.ogg" type="AudioStream" id=4]
[ext_resource path="res://sfx/hit.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 114.5 )

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="QuadMesh" id=1]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.279755, 0.718566, 0.804688, 1, 0.363922, 0.540948, 0.878906, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 135, 145 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )
secret = "bongoongo"

[node name="platformNode" type="Node2D" parent="."]
position = Vector2( 407.982, 18.682 )

[node name="startPlatform" parent="platformNode" instance=ExtResource( 2 )]
position = Vector2( -536.982, 0.318001 )

[node name="player" parent="." instance=ExtResource( 1 )]

[node name="platformEnd" type="Area2D" parent="."]
position = Vector2( -622, 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="platformEnd"]
position = Vector2( 0, -32.5 )
shape = SubResource( 4 )

[node name="platformStart" type="Area2D" parent="."]
position = Vector2( 415, 28 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="platformStart"]
position = Vector2( 9, 4 )
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 112, -82 )
current = true
zoom = Vector2( 0.335, 0.465 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Camera2D"]
position = Vector2( 22.5553, 2.54942 )
rotation = 1.5708
scale = Vector2( 291.285, 557.49 )
z_index = -1
mesh = SubResource( 1 )
texture = SubResource( 3 )

[node name="obstacleEntry" type="Node2D" parent="."]
position = Vector2( 417, 11 )

[node name="gameOverLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 58.0
margin_top = -138.0
margin_right = 147.0
margin_bottom = -122.0
rect_scale = Vector2( 1.381, 1.331 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
text = "Game Over :("
fit_content_height = true
scroll_active = false

[node name="spawnTimer" type="Timer" parent="."]
wait_time = 0.8

[node name="difficultyStep" type="Timer" parent="."]
wait_time = 10.0

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( -23, -224 )
shape = SubResource( 6 )
action = "jump"

[node name="startInstructions" type="RichTextLabel" parent="."]
margin_left = 15.0
margin_top = -197.0
margin_right = 190.0
margin_bottom = -91.0
rect_scale = Vector2( 1.162, 1.16 )
text = "Press space, click your mouse or tap the screen to jump!

Casual reminder: Avoid spooky skeletons and ugly dragons."

[node name="bgmPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.487

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="scoreLabel" type="Label" parent="."]
margin_left = 159.0
margin_top = -215.0
margin_right = 202.0
margin_bottom = -201.0
text = "Score: "

[node name="scoreCount" type="Label" parent="."]
margin_left = 200.0
margin_top = -215.0
margin_right = 240.0
margin_bottom = -201.0
text = "0"

[node name="nameEntry" type="LineEdit" parent="."]
visible = false
margin_left = 108.0
margin_top = -77.0
margin_right = 239.0
margin_bottom = -47.0
max_length = 8

[node name="Label" type="Label" parent="nameEntry"]
margin_left = -111.0
margin_top = 8.0
margin_right = -2.0
margin_bottom = 26.0
text = "Enter your name:"

[node name="submitButton" type="Button" parent="nameEntry"]
margin_left = 15.0
margin_top = 35.0
margin_right = 127.0
margin_bottom = 72.0
text = "Submit Score"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="highScoreTable" type="RichTextLabel" parent="."]
margin_left = 2.0
margin_top = -175.0
margin_right = 223.0
margin_bottom = -79.0

[node name="restartButton" type="Button" parent="."]
visible = false
margin_left = 4.0
margin_top = -41.0
margin_right = 116.0
margin_bottom = -4.0
text = "Restart"

[connection signal="area_entered" from="platformEnd" to="." method="_on_platformEnd_area_entered"]
[connection signal="area_exited" from="platformStart" to="." method="_on_platformStart_area_exited"]
[connection signal="timeout" from="spawnTimer" to="." method="_on_spawnTimer_timeout"]
[connection signal="timeout" from="difficultyStep" to="." method="_on_difficultyStep_timeout"]
[connection signal="pressed" from="nameEntry/submitButton" to="." method="_on_submitButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="restartButton" to="." method="_on_restartButton_pressed"]
